# process-fun-rs

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
examples/: basic.rs  duplicate_detection.rs  macro_detection.rs
process-fun/: Cargo.toml
process-fun-core/: Cargo.toml
process-fun-core/src/: lib.rs
process-fun-macro/: Cargo.toml
process-fun-macro/src/: lib.rs
process-fun/examples/: basic.rs
process-fun/src/: lib.rs
