[workspace]
resolver = "2"
members = [
    "process-fun-macro",
    "process-fun",
    "process-fun-core",
]
package.license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.42.0", features = ["full"] }
process-wrap = { version = "8.0.2", features = ["tokio1"] }
syn = { version = "2.0.90", features = ["full"] }
quote = "1.0"
thiserror = "2.0.4"
itertools = "0.13"
derive-new = "0.7.0"
