[workspace]
resolver = "2"
members = [
    "process-fun-macro",
    "process-fun",
    "process-fun-core",
]
package.license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.214", features = ["derive"] }
syn = { version = "2.0.90", features = [] }
quote = "1.0"
thiserror = "2.0.4"
itertools = "0.13"
derive-new = "0.7.0"
