[package]
name = "process-fun-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
inventory = "0.3"
once_cell = "1.18"
thiserror = { workspace = true }
interprocess = "2.2.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
