[package]
name = "process-fun-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
interprocess = "2.2.2"
nix = { version = "0.29", features = ["process"] }
syn = { workspace = true }


[features]
debug = []