[package]
name = "process-fun-core"
version = "0.1.2"
edition = "2021"
description = "Core functionality for process-fun, a Rust library for process management and IPC"
license = "Apache-2.0"
repository = "https://github.com/eytans/process-fun-rs"
documentation = "https://docs.rs/process-fun-core"
readme = "../README.md"
keywords = ["process", "ipc", "communication"]
categories = ["development-tools", "os"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
interprocess = "2.2.2"
nix = { version = "0.29", features = ["process", "fs", "signal"] }
syn = { workspace = true }
bincode = "1.3.3"

[features]
debug = []
