[package]
name = "process-fun-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
debug = []
test-nocapture = []

[dependencies]
process-fun-core = { path = "../process-fun-core" }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inventory = "0.3"
proc-macro2 = "1.0"
prettyplease = "0.2.25"
proc-macro-error = "1.0"
