[package]
name = "process-fun"
version = "0.1.0"
edition = "2021"
description = "A Rust library for process management and inter-process communication"
license = "Apache-2"
repository = "https://github.com/eytans/process-fun-rs"
documentation = "https://docs.rs/process-fun"
readme = "../README.md"
keywords = ["process", "ipc", "communication"]
categories = ["development-tools", "os"]

[features]
debug = [
    "process-fun-macro/debug",
    "process-fun-core/debug"
]

[dependencies]
process-fun-core = { version = "0.1.0", path = "../process-fun-core" }
process-fun-macro = { version = "0.1.0", path = "../process-fun-macro" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = { workspace = true }
interprocess = "2.2.2"
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
tempfile = "3.10"
